--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^7.6.1",
+    "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
     "populate": "^5.0.1",
