--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^7.6.1",
@@ -9,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
     "populate": "^5.0.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
   },
   "type": "module",
