--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -7,16 +8,20 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "populate": "^5.0.1",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2"
   },
   "type": "module",
-  "name": "segunda-preentrega",
+  "name": "desafio-refactor",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
