--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nanoid": "^5.0.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "populate": "^5.0.1",
     "session-file-store": "^1.5.0",
